@startuml ObserverPattern

hide empty members

abstract class Subject{
    registerPushObserver(self, observer)
    removePushObserver(self, observer)
    registerPullObserver(self, observer)
    removePullObserver(self, observer)
    notifyPullObserver(self)
    notifyObserver(self)
    hasChange(self)
    {abstract} notifyPushObserver(self)
}

class WeatherData{
    float temperature
    float humidity
    float pressure
    notifyPushObserver(self)
    simulateChange(self, newTemperature, newHumidity, newPressure)
}

abstract class Observer{
    {abstract} update(self, *args)
}

class CurrentConditionsDisplay{
    float temperature
    float humidity
    display(self)
    update(self, *args)
}

class StatisticsDisplay{
    float avgTemperature
    float maxTemperature
    float minTemperature
    display(self)
    update(self, *args)
}

class ForecastDisplay{
    float currentPressure
    float lastPressure
    display(self)
    update(self, *args)
}

Subject <|-- WeatherData

Observer <|-- CurrentConditionsDisplay
Observer <|-- StatisticsDisplay
Observer <|-- ForecastDisplay

Subject "1" - "many" Observer : < register 

@enduml